add: 画面遷移の実装

--- a/cuisson_sousvide_app/app/src/main/res/values/strings.xml
+++ b/cuisson_sousvide_app/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">cuisson_sous-vide_app</string>
+    <string name="app_name">TestActivity</string>
+    <string name="main">Main Activity</string>
+    <string name="move">MOVE</string>
+    <string name="return_sub">RETURN</string>
+    <string name="watch">Watch</string>
+    <string name="command">Command</string>
 </resources>
