--- a/cuisson_sousvide_app/app/src/main/res/values/strings.xml
+++ b/cuisson_sousvide_app/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="return_sub">RETURN</string>
     <string name="watch">Watch</string>
     <string name="command">Command</string>
+    <string name="clear">Clear</string>
+    <string name="connection">Connection</string>
 </resources>
