add: connectionの文字を分割

--- a/cuisson_sousvide_app/app/src/main/res/values/strings.xml
+++ b/cuisson_sousvide_app/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="watch">Watch</string>
     <string name="command">Command</string>
     <string name="clear">Clear</string>
-    <string name="connection">Connection...</string>
+    <string name="connection">Connection</string>
+    <string name="connecting">Connection...</string>
 </resources>
