--- a/cuisson_sousvide_app/app/src/main/res/values/strings.xml
+++ b/cuisson_sousvide_app/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TestActivity</string>
+
     <string name="main">Main Activity</string>
     <string name="move">MOVE</string>
     <string name="return_sub">RETURN</string>
@@ -8,4 +9,8 @@
     <string name="clear">Clear</string>
     <string name="connection">Connection</string>
     <string name="connecting">Connection...</string>
+
+    <string name="time">Time</string>
+    <string name="temp">Temp</string>
+    <string name="cook">Cook</string>
 </resources>
