add: 画面を作成

--- a/cuisson_sousvide_app/app/src/main/res/values/strings.xml
+++ b/cuisson_sousvide_app/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="time">Time</string>
     <string name="temp">Temp</string>
     <string name="cook">Cook</string>
+
+    <string name="stop">Stop</string>
 </resources>
