add: アプリの名前をSousCookerと命名

--- a/cuisson_sousvide_app/app/src/main/res/values/strings.xml
+++ b/cuisson_sousvide_app/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TestActivity</string>
+    <string name="app_name">SousCooker</string>
 
     <string name="main">Main Activity</string>
     <string name="move">MOVE</string>
